--- a/Proyecto-Tienda/package.json
+++ b/Proyecto-Tienda/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
