--- a/Proyecto-Tienda/package.json
+++ b/Proyecto-Tienda/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@sweetalert2/themes": "^5.0.17",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
@@ -22,6 +23,7 @@
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.0",
+    "react-sweetalert2": "^0.6.0",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
